tests/ui/unknown_annotation.stderr
error: Unknown annotation '@respons'
       help: did you mean '@response'?
       note: valid annotations are @response, @example, @tag, @security, @id, @hidden, @rovo-ignore
 --> tests/ui/unknown_annotation.rs:8:1
  |
8 | /// @respons 200 Json<String> Typo in annotation
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
