tests/ui/unknown_annotation.rs
#![allow(unused)]
use aide::axum::IntoApiResponse;
use axum::response::Json;
use rovo::rovo;

/// Test handler
///
/// @respons 200 Json<String> Typo in annotation
#[rovo]
async fn test_handler() -> impl IntoApiResponse {
    Json("test".to_string())
}

fn main() {}
